# Agentic-Medical-Voice-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_SCRIPT.md  MANUAL_TEST_PLAN.md  Medical Voice Agent Test Strategy.md  Medical Voice Agent — System Prompt.md  PROJECT_INTRODUCTION.md  README.md  package-lock.json  package.json
backend/: README.md  pyproject.toml  schema.sql  seed.sql
backend/.vercel/: project.json
backend/app/: config.py  main.py  models.py  supabase.py
backend/app/api/: deps.py  doctors.py  login.py  main.py  users.py  vapi_auth.py  vapi_helpers.py  vapi_webhook.py
backend/migrations/: 001_reschedule_appointment_fn.sql  002_unique_doctor_appointment.sql  003_reschedule_verify_patient.sql  004_exclusion_overlap_constraint.sql  005_check_end_after_start.sql  006_allow_duplicate_patient_phone.sql  007_auth_user_trigger_diagnostics.sql  008_remove_auth_user_created_trigger.sql  009_call_monitoring_fields.sql  010_medical_knowledge_rag.sql
backend/tests/: conftest.py  support.py  test_admin_routes.py  test_auth_routes.py  test_book.py  test_booking_and_reschedule.py  test_cancel.py  test_contract_fixes.py  test_emergency_classifier.py  test_find_slots.py  test_find_slots_tool.py  test_identify_patient.py  test_rag_retriever.py  test_reschedule.py  test_slot_engine.py  test_time_nlp.py  test_time_utils.py  test_triage.py  test_triage_engine.py  test_vapi_helpers.py  test_vapi_tools_booking_and_slots.py  test_vapi_tools_identify_patient.py  test_vapi_tools_reschedule_cancel.py  test_vapi_tools_triage.py  test_vapi_webhook.py
(+85 files in other folders)
